--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="html/ex1.html">Exercice 1</a> <br>
   <a href="html/ex2.html">Exercice 2</a> <br>
   <a href="html/ex3.html">Exercice 3</a> <br>
+  <a href="html/ex4.html">Exercice 4</a> <br>
 </body>
 
 </html>
